# stay

./: .gitattributes  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  shared.rs  unix_app.rs
