[package]
name = "stay"
version = "0.1.5"
edition = "2021"
description = "A tiny terminal session keeper for Linux."
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "poll", "process", "signal", "term"] }
vt100 = "0.16"
